Formatted Nim referee.